--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_main" >
+            
+        </activity>
       	<uses-library android:name="com.google.android.maps" android:required="true"/>
     </application>
 
