--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:allowBackup="true" android:allowClearUserData="false" android:persistent="false">
+        android:theme="@style/Theme.Sherlock" android:allowBackup="true" android:allowClearUserData="false" android:persistent="false">
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
