--- a/project.properties
+++ b/project.properties
@@ -12,8 +12,5 @@
 
 # Project target.
 target=Google Inc.:Google APIs:16
-<<<<<<< HEAD
-android.library.reference.1=../../Desktop/ANDROID/ActionBarSherlock-4.2.0/ActionBarSherlock-4.2.0/library
-=======
-android.library.reference.1=../../../workspace/library
->>>>>>> refs/remotes/origin/master
+android.library.reference.1=../../Documents/workspace/AMD/library
+
